labs/aula04/memcached1-deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: memcached1
  name: memcached1
  namespace: 4labs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: memcached1
  strategy: {}
  template:
    metadata:
      labels:
        app: memcached1
    spec:
      containers:
      - image: memcached:latest
        name: memcached1
        ports:
        - containerPort: 11211
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: memcached1
  name: memcached1
  namespace: 4labs
spec:
  clusterIP: None
  ports:
  - port: 11211
    protocol: TCP
    targetPort: 11211
  selector:
    app: memcached1
