labs/aula04/ingress-tls-app.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: ingress-tls-app
  namespace: 4labs
spec:
  rules:
  - host: 4linux-app.4labs.example
    http:
      paths:
      - backend:
          serviceName: app
          servicePort: 8080
        path: /
  tls:
  - hosts:
    - 4linux-app.4labs.example
    secretName: certificado1-4labs-tls
